--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -11,10 +11,21 @@
     <servlet-name>articleDaoImplServlet</servlet-name>
     <servlet-class>com.LiMing.servlet.articleDaoImplServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>article_moreDaoImplServlet</servlet-name>
+    <servlet-class>com.LiMing.servlet.article_moreDaoImplServlet</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>articleDaoImplServlet</servlet-name>
     <url-pattern>/news</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>article_moreDaoImplServlet</servlet-name>
+    <url-pattern>/new</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
